--- a/style-contact.css
+++ b/style-contact.css
@@ -1,99 +1,116 @@
-/* titre page */
+/* Mise en page de la div comprenant le titre et le sous titre*/
+
+.main-title {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+}
 
 .h1index {
-        height: 80%;
+    height: 80%;
     font-size: 4rem;
     color: #39424e;
     text-shadow: 1px 1px 2px grey;
-    display: flex;
-    justify-content: center;
-    align-items: column;
-    margin: 0;
-    margin-top: 3rem;
 }
 
 .h1-second-index {
     width: 100%;
     color: rgb(253, 130, 130);
     text-shadow: 1px 1px 2px grey;
-    display: flex;
-    justify-content: center;
-    align-items: column;
     text-decoration: none;
 }
 
-
 /* Formulaire partie 1 contact reseaux sociaux CSS Fatima */
+
+/* mise en page de la div réseaux sociaux comprenant le titre + les logos + la videos + le caroussel*/
 
 .reseaux-sociaux {
     margin-left: 3rem;
-    border : red solid;
-    }
+    margin-right: 3rem;
+}
+
+/* mise en page de la div contacte_wild comprenant les logos + la video + le caroussel*/
 
 .contacter_wild {
-    border : green solid;
     display: flex;
-    width: 80%;
-    margin-left: 5rem;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    align-content: flex-start;
+    margin-left: 5%;
+    width: 90%;
 }
 
+/* div comprenant les logos des réseaux sociaux*/
+
 .logo-rs-wild {
-    border : black solid;
     list-style: none;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    padding: 4rem;
+    padding: 2%;
 }
+
+/* taille des logos*/
 
 .logo-rs {
     width: 3.5rem;
 }
 
+/* mise en page de la div blog-wild comprenant la video et le caroussel*/
+
 .blog-wild {
-    border : red solid;
     display: flex;
-    padding-top: 3rem;
-    width: 100%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: stretch;
+    width: 80%;
 }
 
-.article-blog, .article-blog2, .article-blog3 {
-    width: 20rem;
-    border-radius: 30px;
-    box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
-    margin-left: 23%;
-    margin-top: 10%;
-}
-
-/** test caroussel */
+/* mise en page du caroussel*/
 
 .caroussel {
-    border: blue solid;
-    width: 50%;
-    display : flex;
+    display: flex;
     flex-direction: column;
-    margin-left: 50px;
-    }
-
-.panorama_caroussel{
-    display: inline-block;
-    justify-content: end;
-  
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+    width: 30%;
 }
 
-/* Next & previous buttons */
+/* mise en page des fleches du caroussel*/
+
+.fleche {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    bottom: 10rem;
+    width: 100%;
+}
 
 .prev, .next {
     cursor: pointer;
     display: inline-block;
-    color: grey;
-    font-size: 30px;
+    font-size: 25px;
     transition: 0.8s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
 }
 
-/* The dots/bullets/indicators */
+/** mis en page des images du blog*/
+
+.article-blog, .article-blog2, .article-blog3 {
+    width: 20rem;
+    border-radius: 30px;
+    box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
+    margin-top: 10%;
+}
+
+/** mis en page des dot du caroussel*/
 
 .dot {
     cursor: pointer;
@@ -102,7 +119,7 @@
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
-    border : black;
+    border: black;
     display: inline-block;
     justify-self: flex-end;
     transition: background-color 0.6s ease;
@@ -112,16 +129,7 @@
     background-color: #717171;
 }
 
-.fleche{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    bottom : 200px;
-    width: 100%;
-    
-}
-
-/* Fading animation */
+/* Caroussel animation */
 
 .fade {
     -webkit-animation-name: fade;
@@ -148,62 +156,68 @@
     }
 }
 
-@media (max-width: 800px){
-    .blog-wild{
+@media (max-width: 800px) {
+    .blog-wild {
         flex-direction: column
-        
     }
 }
 
-
 /*--------------------------------------------------------------------*/
+
 /* Formulaire partie 1 contact reseaux sociaux CSS Fatima */
+
 .formulaire {
-    display : flex;
+    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
     margin-left: 3rem;
     height: 50rem;
-    width: 100%;
-    padding-top: 3rem;
+   
 }
 
 /* Formulaire CSS Thomas */
 
 .divContact {
+
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    height: 100%;
-    width: 60%;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: stretch;
+    width: 100%;
+    height: 80%;
 }
 
 .divInput {
-    width: 80%;
-    height: 5%;
-    margin-left: auto;
-    margin-right: auto;
+    height: 10%;
     margin-bottom: 50px;
+    
 }
 
 .divMessage {
-    
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 50px;
-    height: 20rem;
+    width: 20rem;
 }
-
-#message, #name, #email {
-    height: 100%;
-    width: 100%;
+#message{
+    height: 20rem;
+    width: 50rem;
+}
+ #name, #email {
+    height: 80%;
+    width: 50rem;
     border-radius: 3px;
     font-size: 15px;
 }
 
 .button {
     font: 16px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left : 40%;
+   
     background: #F76C6C;
     border-radius: 30px;
     color: white;
@@ -227,14 +241,4 @@
     .button {
         margin-right: 0px;
     }
-}
-
-.texte {
-    height: 50px;
-    width: 100px;
-}
-
-.message {
-    height: 100px;
-    width: 100%;
 }
