--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@
   .image-remote {
     width: 100%;
     height: 15em;
+    border-radius: 20px;
   }
 
   @media (min-width: 800px) and (max-width: 999px) {
